objects/ErrorLog__c.object
<CustomObject>
    <description>Custom Exception Object to store the exception log. This object is part of generalized exception handling framework.</description>
    <fields>
        <fullName>Class__c</fullName>
        <description>Name of the Web Service class, Broker Class, Batch Class, Schedule class, Trigger</description>
        <label>Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Category__c</fullName>
        <label>Error Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AsyncException</fullName>
                </value>
                <value>
                    <fullName>CalloutException</fullName>
                </value>
                <value>
                    <fullName>DmlException</fullName>
                </value>
                <value>
                    <fullName>EmailException</fullName>
                </value>
                <value>
                    <fullName>InvalidParameterValueException</fullName>
                </value>
                <value>
                    <fullName>ListException</fullName>
                </value>
                <value>
                    <fullName>MathException</fullName>
                </value>
                <value>
                    <fullName>NoAccessException</fullName>
                </value>
                <value>
                    <fullName>NoDataFoundException</fullName>
                </value>
                <value>
                    <fullName>NoSuchElementException</fullName>
                </value>
                <value>
                    <fullName>NullPointerException</fullName>
                </value>
                <value>
                    <fullName>QueryException</fullName>
                </value>
                <value>
                    <fullName>RequiredFeatureMissing</fullName>
                </value>
                <value>
                    <fullName>SearchException</fullName>
                </value>
                <value>
                    <fullName>SecurityException</fullName>
                </value>
                <value>
                    <fullName>SerializationException</fullName>
                </value>
                <value>
                    <fullName>SObjectException</fullName>
                </value>
                <value>
                    <fullName>StringException</fullName>
                </value>
                <value>
                    <fullName>TypeException</fullName>
                </value>
                <value>
                    <fullName>VisualforceException</fullName>
                </value>
                <value>
                    <fullName>XmlException</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <description>Capture Error Code from Web Service or any class</description>
        <label>Error Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>All iterative information / unit information is captured here</description>
        <label>Error Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Source__c</fullName>
        <label>Error Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Type__c</fullName>
        <label>Error Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Time__c</fullName>
        <label>Log Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Method_Name__c</fullName>
        <label>Method Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Record_Id__c</fullName>
        <label>SFDC Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Org_Info__c</fullName>
        <description>Salesforce Org name and Id</description>
        <label>SF Org Info</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Name__c</fullName>
        <label>Service Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <description>Range of values - 1 to 5. Default value will be 5 for API</description>
        <label>Severity</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Transaction_Id__c</fullName>
        <description>It is used for identifying web service call out</description>
        <label>Transaction Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <description>Name of user receiving the error</description>
        <label>User Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>ErrorLog</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ERR-{000000000}</displayFormat>
        <label>Error</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ErrorLogs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>